# chatbot-websearch-rag

./: .gitignore  README.md  model_config.txt  requirements.txt
personal_chat_bot/: README.md  pyproject.toml
personal_chat_bot/src/personal_chat_bot/: main.py
personal_chat_bot/src/personal_chat_bot/crews/chatbot_crew/: chatbot_crew.py
personal_chat_bot/src/personal_chat_bot/crews/chatbot_crew/config/: agents.yaml  tasks.yaml
personal_chat_bot/src/personal_chat_bot/crews/summarizer_crew/: summarizer_crew.py
personal_chat_bot/src/personal_chat_bot/crews/summarizer_crew/config/: agents.yaml  tasks.yaml
streamlit/: ChatBot.py
streamlit/db/: chroma.sqlite3
streamlit/pages/: 1_ChatBot_Guidelines.py  2_Guideline_Tips.py  3_Prompting_Tips.py
